--- a/Backend/Backend/Properties/launchSettings.json
+++ b/Backend/Backend/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7127;http://localhost:5245",
+      "applicationUrl": "https://localhost:7127;http://0.0.0.0:5245",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
