--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "expo": "~54.0.25",
     "expo-checkbox": "^5.0.7",
     "expo-constants": "~18.0.10",
